compiler/testData/diagnostics/tests/regressions/itselfAsUpperBoundLocal.kt
// !WITH_NEW_INFERENCE
fun bar() {
    fun <<!CYCLIC_GENERIC_UPPER_BOUND!>T: T?<!>> foo() {}
    <!NI;NEW_INFERENCE_NO_INFORMATION_FOR_PARAMETER, OI;TYPE_INFERENCE_NO_INFORMATION_FOR_PARAMETER!>foo<!>()
}
